--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li>
+				<a href="https://www.beforward.jp/stocklist/make=1/model=189">Home</a>
+			</li>
+			<li>
+				<a href="https://www.beforward.jp/stocklist/make=1/model=189">About</a>
+			</li>
+			<li>
+				<a href="https://www.beforward.jp/stocklist/make=1/model=189">Services</a>
+			</li>
+		</ul>
+	</nav>
+	<h1>3 random audios</h1>
+	<audio controls src=" http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio>
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
+	<audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
